--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.4.19"
   }
